procps-3.1.13 --> procps-3.1.14

handle 32-bit dev_t of Linux 2.6

procps-3.1.12 --> procps-3.1.13

ps: can display NPTL threads w/ kernel patch
no seLinux for now (new kernel interface)

procps-3.1.11 --> procps-3.1.12

ps: explicit width ("ps -o pid,wchan:42,args")
ps: $PS_FORMAT works properly                    #201575
top: new Linux 2.6.0-test4 CPU stats shown
top: multiple -p options work again
top: fixed 4 GB wrap-around
ps: has a set of tests to ensure correctness
man page: /var/run/utmp, not /etc/utmp           #206583
required flags moved out of CFLAGS               #205429
RPM generation handles /lib64
WCHAN skips leading '.'
vmstat: numerous new features

procps-3.1.10 --> procps-3.1.11

compile with gcc 2.95 again (C99 issue)

procps-3.1.9 --> procps-3.1.10

handle GPLONLY_ symbols                       #143549 #188374
kill: better man page
skill: better man page
ps: PID-like columns change width as needed
top: COMMAND instead of Command
vmstat: -m displays slabinfo
vmstat: -d displays disk stats

procps-3.1.8 --> procps-3.1.9

memory sizes fixed for 64-bit w/ gcc 3.x      #194376 #191933
ps: detect broken OS install w/o /proc mounted        #172735
top: fix suspend/resume behavior
top: ditch warning until a GOOD interface is found    #188271
kill: more info in the man page                       #182414
ps: document the -o, o, -O, and O options             #169301
vmstat: choose units you like: 1000, 1024, 1000000...

procps-3.1.7 --> procps-3.1.8

top: fix keyboard handling (help screen, etc.)

procps-3.1.6 --> procps-3.1.7

Makefile: made SKIP feature easier to use
watch: --help now explains -t, --no-title    #182246
ps: warning directs users to the FAQ
top: batch mode can refresh by fractional seconds
top: faster start-up
top: do not refresh like crazy
ps: better crash message

procps-3.1.5 --> procps-3.1.6

handle the 2.5.61 kernel
top: memory leak fixed
ps: new --ppid option selects by PPID
watch: new --no-title option              #179862